# mpp

./: CMakeLists.txt
cmake/: set_compiler_flags.cmake
example/: CMakeLists.txt
example/quickstart/: CMakeLists.txt  classic_hamiltonian.cpp
include/: mpp.hpp
include/mpp/: config.hpp  version.hpp
include/mpp/chains/: mcmc_chain.hpp
include/mpp/dists/: banana.hpp  multivariate_normal.hpp
include/mpp/ensemble/: red_blue.hpp
include/mpp/hamiltonian/: classic_hamiltonian.hpp  kinetic_energy_multivar_normal.hpp  nuts.hpp  reimann_manifold_hmc.hpp
include/mpp/utils/: lin_alg_utils.hpp  progress_bar.hpp
test/: CMakeLists.txt
test/chains/: CMakeLists.txt  mcmc_chain.cpp
test/ensemble/: CMakeLists.txt  red_blue.cpp
test/hamiltonian/: CMakeLists.txt  classic_hamiltonian.cpp  kinetic_energy_multivar_normal.cpp  log_post_balan_2016_2d.cpp  log_post_taylor_2008_2d.cpp  log_post_wandelt_2004_2d.cpp  multi_var_norm_as_invar_dens_rmhmc.cpp  norm_dist_as_invar_dens_rmhmc.cpp  nuts.cpp  reimann_manifold_hmc.cpp  var_est_with_gauss_noise_change_of_vars.cpp  var_est_with_gaussian_noise.cpp  var_est_with_gaussian_noise_ana_conv.cpp  var_est_with_gaussian_noise_softplus.cpp
test/hamiltonian/helpers/: plot_sampled_and_analytical_posteriors.py  plot_sampled_and_softplus_posteriors.py
test/utils/: CMakeLists.txt  progress_bar.cpp
